jflex-language/gen/org/intellij/jflex/parser/JFlexParser.java
/*
 * Copyright 2011-present JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
 */
package org.intellij.jflex.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static org.intellij.jflex.psi.JFlexTypes.*;
import static org.intellij.jflex.parser.JFlexParserUtil.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class JFlexParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType type, PsiBuilder builder) {
    parseLight(type, builder);
    return builder.getTreeBuilt();
  }

  public void parseLight(IElementType type, PsiBuilder builder) {
    boolean result;
    builder = adapt_builder_(type, builder, this, EXTENDS_SETS_);
    Marker marker = enter_section_(builder, 0, _COLLAPSE_, null);
    result = parse_root_(type, builder);
    exit_section_(builder, 0, marker, type, result, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType type, PsiBuilder builder) {
    return parse_root_(type, builder, 0);
  }

  static boolean parse_root_(IElementType type, PsiBuilder builder, int level) {
    return flex_file(builder, level + 1);
  }

  public static final TokenSet[] EXTENDS_SETS_ = new TokenSet[] {
    create_token_set_(FLEX_DECLARATIONS_SECTION, FLEX_LEXICAL_RULES_SECTION, FLEX_USER_CODE_SECTION),
    create_token_set_(FLEX_CHAR_RANGE, FLEX_CHOICE_EXPRESSION, FLEX_CLASS_EXPRESSION, FLEX_EXPRESSION,
      FLEX_LITERAL_EXPRESSION, FLEX_MACRO_REF_EXPRESSION, FLEX_NOT_EXPRESSION, FLEX_PAREN_EXPRESSION,
      FLEX_PREDEFINED_CLASS_EXPRESSION, FLEX_QUANTIFIER_EXPRESSION, FLEX_SEQUENCE_EXPRESSION),
  };

  /* ********************************************************** */
  // '{' raw? '}' | '|'
  public static boolean action(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "action")) return false;
    if (!nextTokenIs(builder, "<action>", FLEX_BAR, FLEX_BRACE1)) return false;
    boolean result;
    Marker marker = enter_section_(builder, level, _NONE_, FLEX_JAVA_CODE, "<action>");
    result = action_0(builder, level + 1);
    if (!result) result = consumeToken(builder, FLEX_BAR);
    exit_section_(builder, level, marker, result, false, null);
    return result;
  }

  // '{' raw? '}'
  private static boolean action_0(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "action_0")) return false;
    boolean result, pinned;
    Marker marker = enter_section_(builder, level, _NONE_);
    result = consumeToken(builder, FLEX_BRACE1);
    pinned = result; // pin = 1
    result = result && report_error_(builder, action_0_1(builder, level + 1));
    result = pinned && consumeToken(builder, FLEX_BRACE2) && result;
    exit_section_(builder, level, marker, result, pinned, null);
    return result || pinned;
  }

  // raw?
  private static boolean action_0_1(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "action_0_1")) return false;
    consumeToken(builder, FLEX_RAW);
    return true;
  }

  /* ********************************************************** */
  // string | char_class | char_or_esc
  static boolean char_class_atom(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "char_class_atom")) return false;
    boolean result;
    Marker marker = enter_section_(builder, level, _NONE_, null, "<char>");
    result = consumeToken(builder, FLEX_STRING);
    if (!result) result = consumeToken(builder, FLEX_CHAR_CLASS);
    if (!result) result = char_or_esc(builder, level + 1);
    exit_section_(builder, level, marker, result, false, null);
    return result;
  }

  /* ********************************************************** */
  // char_range | class_expression | macro_ref_expression | char_class_atom
  static boolean char_class_item(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "char_class_item")) return false;
    boolean result;
    Marker marker = enter_section_(builder, level, _NONE_, null, "<char>");
    result = char_range(builder, level + 1);
    if (!result) result = class_expression(builder, level + 1);
    if (!result) result = macro_ref_expression(builder, level + 1);
    if (!result) result = char_class_atom(builder, level + 1);
    exit_section_(builder, level, marker, result, false, null);
    return result;
  }

  /* ********************************************************** */
  // '&&' | '||' | '~~' | '--'
  static boolean char_class_op(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "char_class_op")) return false;
    boolean result;
    Marker marker = enter_section_(builder, level, _NONE_, null, "<char>");
    result = consumeToken(builder, FLEX_AMPAMP);
    if (!result) result = consumeToken(builder, FLEX_BARBAR);
    if (!result) result = consumeToken(builder, FLEX_TILDETILDE);
    if (!result) result = consumeToken(builder, FLEX_DASHDASH);
    exit_section_(builder, level, marker, result, false, null);
    return result;
  }

  /* ********************************************************** */
  // char | char_esc
  static boolean char_or_esc(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "char_or_esc")) return false;
    if (!nextTokenIs(builder, "", FLEX_CHAR, FLEX_CHAR_ESC)) return false;
    boolean result;
    result = consumeToken(builder, FLEX_CHAR);
    if (!result) result = consumeToken(builder, FLEX_CHAR_ESC);
    return result;
  }

  /* ********************************************************** */
  // char_or_esc '-' char_or_esc
  public static boolean char_range(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "char_range")) return false;
    if (!nextTokenIs(builder, "<char>", FLEX_CHAR, FLEX_CHAR_ESC)) return false;
    boolean result;
    Marker marker = enter_section_(builder, level, _NONE_, FLEX_CHAR_RANGE, "<char>");
    result = char_or_esc(builder, level + 1);
    result = result && consumeToken(builder, FLEX_DASH);
    result = result && char_or_esc(builder, level + 1);
    exit_section_(builder, level, marker, result, false, null);
    return result;
  }

  /* ********************************************************** */
  // macro_definition | state_declaration | option
  static boolean declaration(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "declaration")) return false;
    boolean result;
    Marker marker = enter_section_(builder, level, _NONE_);
    result = macro_definition(builder, level + 1);
    if (!result) result = state_declaration(builder, level + 1);
    if (!result) result = option(builder, level + 1);
    exit_section_(builder, level, marker, result, false, JFlexParser::declaration_recover);
    return result;
  }

  /* ********************************************************** */
  // !(<<is_percent>> | id '=') section_recover
  static boolean declaration_recover(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "declaration_recover")) return false;
    boolean result;
    Marker marker = enter_section_(builder);
    result = declaration_recover_0(builder, level + 1);
    result = result && section_recover(builder, level + 1);
    exit_section_(builder, marker, null, result);
    return result;
  }

  // !(<<is_percent>> | id '=')
  private static boolean declaration_recover_0(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "declaration_recover_0")) return false;
    boolean result;
    Marker marker = enter_section_(builder, level, _NOT_);
    result = !declaration_recover_0_0(builder, level + 1);
    exit_section_(builder, level, marker, result, false, null);
    return result;
  }

  // <<is_percent>> | id '='
  private static boolean declaration_recover_0_0(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "declaration_recover_0_0")) return false;
    boolean result;
    Marker marker = enter_section_(builder);
    result = is_percent(builder, level + 1);
    if (!result) result = parseTokens(builder, 0, FLEX_ID, FLEX_EQ);
    exit_section_(builder, marker, null, result);
    return result;
  }

  /* ********************************************************** */
  // [] declaration (!(<<eof>> | '%%') declaration) *
  public static boolean declarations_section(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "declarations_section")) return false;
    boolean result, pinned;
    Marker marker = enter_section_(builder, level, _NONE_, FLEX_DECLARATIONS_SECTION, "<declarations section>");
    result = declarations_section_0(builder, level + 1);
    pinned = result; // pin = 1
    result = result && report_error_(builder, declaration(builder, level + 1));
    result = pinned && declarations_section_2(builder, level + 1) && result;
    exit_section_(builder, level, marker, result, pinned, JFlexParser::section_recover);
    return result || pinned;
  }

  // []
  private static boolean declarations_section_0(PsiBuilder builder, int level) {
    return true;
  }

  // (!(<<eof>> | '%%') declaration) *
  private static boolean declarations_section_2(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "declarations_section_2")) return false;
    while (true) {
      int pos = current_position_(builder);
      if (!declarations_section_2_0(builder, level + 1)) break;
      if (!empty_element_parsed_guard_(builder, "declarations_section_2", pos)) break;
    }
    return true;
  }

  // !(<<eof>> | '%%') declaration
  private static boolean declarations_section_2_0(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "declarations_section_2_0")) return false;
    boolean result, pinned;
    Marker marker = enter_section_(builder, level, _NONE_);
    result = declarations_section_2_0_0(builder, level + 1);
    pinned = result; // pin = 1
    result = result && declaration(builder, level + 1);
    exit_section_(builder, level, marker, result, pinned, null);
    return result || pinned;
  }

  // !(<<eof>> | '%%')
  private static boolean declarations_section_2_0_0(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "declarations_section_2_0_0")) return false;
    boolean result;
    Marker marker = enter_section_(builder, level, _NOT_);
    result = !declarations_section_2_0_0_0(builder, level + 1);
    exit_section_(builder, level, marker, result, false, null);
    return result;
  }

  // <<eof>> | '%%'
  private static boolean declarations_section_2_0_0_0(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "declarations_section_2_0_0_0")) return false;
    boolean result;
    Marker marker = enter_section_(builder);
    result = eof(builder, level + 1);
    if (!result) result = consumeToken(builder, FLEX_TWO_PERCS);
    exit_section_(builder, marker, null, result);
    return result;
  }

  /* ********************************************************** */
  // []
  //   user_code_section
  //   section_div
  //   declarations_section
  //   section_div
  //   lexical_rules_section
  static boolean flex_file(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "flex_file")) return false;
    boolean result, pinned;
    Marker marker = enter_section_(builder, level, _NONE_);
    result = flex_file_0(builder, level + 1);
    pinned = result; // pin = 1
    result = result && report_error_(builder, user_code_section(builder, level + 1));
    result = pinned && report_error_(builder, section_div(builder, level + 1)) && result;
    result = pinned && report_error_(builder, declarations_section(builder, level + 1)) && result;
    result = pinned && report_error_(builder, section_div(builder, level + 1)) && result;
    result = pinned && lexical_rules_section(builder, level + 1) && result;
    exit_section_(builder, level, marker, result, pinned, null);
    return result || pinned;
  }

  // []
  private static boolean flex_file_0(PsiBuilder builder, int level) {
    return true;
  }

  /* ********************************************************** */
  // raw?
  public static boolean java_code(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "java_code")) return false;
    Marker marker = enter_section_(builder, level, _NONE_, FLEX_JAVA_CODE, "<java code>");
    consumeToken(builder, FLEX_RAW);
    exit_section_(builder, level, marker, true, false, null);
    return true;
  }

  /* ********************************************************** */
  // id ( '.' id ) *
  public static boolean java_name(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "java_name")) return false;
    if (!nextTokenIs(builder, FLEX_ID)) return false;
    boolean result, pinned;
    Marker marker = enter_section_(builder, level, _NONE_, FLEX_JAVA_NAME, null);
    result = consumeToken(builder, FLEX_ID);
    pinned = result; // pin = 1
    result = result && java_name_1(builder, level + 1);
    exit_section_(builder, level, marker, result, pinned, null);
    return result || pinned;
  }

  // ( '.' id ) *
  private static boolean java_name_1(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "java_name_1")) return false;
    while (true) {
      int pos = current_position_(builder);
      if (!java_name_1_0(builder, level + 1)) break;
      if (!empty_element_parsed_guard_(builder, "java_name_1", pos)) break;
    }
    return true;
  }

  // '.' id
  private static boolean java_name_1_0(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "java_name_1_0")) return false;
    boolean result, pinned;
    Marker marker = enter_section_(builder, level, _NONE_);
    result = consumeTokens(builder, 1, FLEX_DOT, FLEX_ID);
    pinned = result; // pin = 1
    exit_section_(builder, level, marker, result, pinned, null);
    return result || pinned;
  }

  /* ********************************************************** */
  // java_name java_type_parameters?
  public static boolean java_type(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "java_type")) return false;
    boolean result, pinned;
    Marker marker = enter_section_(builder, level, _NONE_, FLEX_JAVA_TYPE, "<java type>");
    result = java_name(builder, level + 1);
    pinned = result; // pin = 1
    result = result && java_type_1(builder, level + 1);
    exit_section_(builder, level, marker, result, pinned, JFlexParser::type_recover);
    return result || pinned;
  }

  // java_type_parameters?
  private static boolean java_type_1(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "java_type_1")) return false;
    java_type_parameters(builder, level + 1);
    return true;
  }

  /* ********************************************************** */
  // [java_type (',' java_type) *]
  static boolean java_type_list(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "java_type_list")) return false;
    java_type_list_0(builder, level + 1);
    return true;
  }

  // java_type (',' java_type) *
  private static boolean java_type_list_0(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "java_type_list_0")) return false;
    boolean result, pinned;
    Marker marker = enter_section_(builder, level, _NONE_);
    result = java_type(builder, level + 1);
    pinned = result; // pin = 1
    result = result && java_type_list_0_1(builder, level + 1);
    exit_section_(builder, level, marker, result, pinned, null);
    return result || pinned;
  }

  // (',' java_type) *
  private static boolean java_type_list_0_1(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "java_type_list_0_1")) return false;
    while (true) {
      int pos = current_position_(builder);
      if (!java_type_list_0_1_0(builder, level + 1)) break;
      if (!empty_element_parsed_guard_(builder, "java_type_list_0_1", pos)) break;
    }
    return true;
  }

  // ',' java_type
  private static boolean java_type_list_0_1_0(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "java_type_list_0_1_0")) return false;
    boolean result, pinned;
    Marker marker = enter_section_(builder, level, _NONE_);
    result = consumeToken(builder, FLEX_COMMA);
    pinned = result; // pin = 1
    result = result && java_type(builder, level + 1);
    exit_section_(builder, level, marker, result, pinned, null);
    return result || pinned;
  }

  /* ********************************************************** */
  // '<' !'>' java_type (',' java_type) * '>'
  public static boolean java_type_parameters(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "java_type_parameters")) return false;
    if (!nextTokenIs(builder, FLEX_ANGLE1)) return false;
    boolean result, pinned;
    Marker marker = enter_section_(builder, level, _NONE_, FLEX_JAVA_TYPE_PARAMETERS, null);
    result = consumeToken(builder, FLEX_ANGLE1);
    pinned = result; // pin = 1
    result = result && report_error_(builder, java_type_parameters_1(builder, level + 1));
    result = pinned && report_error_(builder, java_type(builder, level + 1)) && result;
    result = pinned && report_error_(builder, java_type_parameters_3(builder, level + 1)) && result;
    result = pinned && consumeToken(builder, FLEX_ANGLE2) && result;
    exit_section_(builder, level, marker, result, pinned, null);
    return result || pinned;
  }

  // !'>'
  private static boolean java_type_parameters_1(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "java_type_parameters_1")) return false;
    boolean result;
    Marker marker = enter_section_(builder, level, _NOT_);
    result = !consumeToken(builder, FLEX_ANGLE2);
    exit_section_(builder, level, marker, result, false, null);
    return result;
  }

  // (',' java_type) *
  private static boolean java_type_parameters_3(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "java_type_parameters_3")) return false;
    while (true) {
      int pos = current_position_(builder);
      if (!java_type_parameters_3_0(builder, level + 1)) break;
      if (!empty_element_parsed_guard_(builder, "java_type_parameters_3", pos)) break;
    }
    return true;
  }

  // ',' java_type
  private static boolean java_type_parameters_3_0(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "java_type_parameters_3_0")) return false;
    boolean result, pinned;
    Marker marker = enter_section_(builder, level, _NONE_);
    result = consumeToken(builder, FLEX_COMMA);
    pinned = result; // pin = 1
    result = result && java_type(builder, level + 1);
    exit_section_(builder, level, marker, result, pinned, null);
    return result || pinned;
  }

  /* ********************************************************** */
  // [] rule_group_item +
  public static boolean lexical_rules_section(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "lexical_rules_section")) return false;
    boolean result, pinned;
    Marker marker = enter_section_(builder, level, _NONE_, FLEX_LEXICAL_RULES_SECTION, "<lexical rules section>");
    result = lexical_rules_section_0(builder, level + 1);
    pinned = result; // pin = 1
    result = result && lexical_rules_section_1(builder, level + 1);
    exit_section_(builder, level, marker, result, pinned, JFlexParser::section_recover);
    return result || pinned;
  }

  // []
  private static boolean lexical_rules_section_0(PsiBuilder builder, int level) {
    return true;
  }

  // rule_group_item +
  private static boolean lexical_rules_section_1(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "lexical_rules_section_1")) return false;
    boolean result;
    Marker marker = enter_section_(builder);
    result = rule_group_item(builder, level + 1);
    while (result) {
      int pos = current_position_(builder);
      if (!rule_group_item(builder, level + 1)) break;
      if (!empty_element_parsed_guard_(builder, "lexical_rules_section_1", pos)) break;
    }
    exit_section_(builder, marker, null, result);
    return result;
  }

  /* ********************************************************** */
  // new_line <<p>> new_line
  static boolean line(PsiBuilder builder, int level, Parser aP) {
    if (!recursion_guard_(builder, level, "line")) return false;
    boolean result, pinned;
    Marker marker = enter_section_(builder, level, _NONE_);
    result = new_line(builder, level + 1);
    result = result && aP.parse(builder, level);
    pinned = result; // pin = 2
    result = result && new_line(builder, level + 1);
    exit_section_(builder, level, marker, result, pinned, null);
    return result || pinned;
  }

  /* ********************************************************** */
  // '$' | '/' expression
  public static boolean look_ahead(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "look_ahead")) return false;
    if (!nextTokenIs(builder, "<look ahead>", FLEX_DOLLAR, FLEX_FSLASH)) return false;
    boolean result;
    Marker marker = enter_section_(builder, level, _NONE_, FLEX_LOOK_AHEAD, "<look ahead>");
    result = consumeToken(builder, FLEX_DOLLAR);
    if (!result) result = look_ahead_1(builder, level + 1);
    exit_section_(builder, level, marker, result, false, null);
    return result;
  }

  // '/' expression
  private static boolean look_ahead_1(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "look_ahead_1")) return false;
    boolean result;
    Marker marker = enter_section_(builder);
    result = consumeToken(builder, FLEX_FSLASH);
    result = result && expression(builder, level + 1, -1);
    exit_section_(builder, marker, null, result);
    return result;
  }

  /* ********************************************************** */
  // new_line id '=' expression
  public static boolean macro_definition(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "macro_definition")) return false;
    boolean result, pinned;
    Marker marker = enter_section_(builder, level, _NONE_, FLEX_MACRO_DEFINITION, "<macro definition>");
    result = new_line(builder, level + 1);
    result = result && consumeTokens(builder, 2, FLEX_ID, FLEX_EQ);
    pinned = result; // pin = 3
    result = result && expression(builder, level + 1, -1);
    exit_section_(builder, level, marker, result, pinned, JFlexParser::macro_definition_recover);
    return result || pinned;
  }

  /* ********************************************************** */
  // !(new_line id '=' | '%%' | <<is_percent>>)
  static boolean macro_definition_recover(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "macro_definition_recover")) return false;
    boolean result;
    Marker marker = enter_section_(builder, level, _NOT_);
    result = !macro_definition_recover_0(builder, level + 1);
    exit_section_(builder, level, marker, result, false, null);
    return result;
  }

  // new_line id '=' | '%%' | <<is_percent>>
  private static boolean macro_definition_recover_0(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "macro_definition_recover_0")) return false;
    boolean result;
    Marker marker = enter_section_(builder);
    result = macro_definition_recover_0_0(builder, level + 1);
    if (!result) result = consumeToken(builder, FLEX_TWO_PERCS);
    if (!result) result = is_percent(builder, level + 1);
    exit_section_(builder, marker, null, result);
    return result;
  }

  // new_line id '='
  private static boolean macro_definition_recover_0_0(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "macro_definition_recover_0_0")) return false;
    boolean result;
    Marker marker = enter_section_(builder);
    result = new_line(builder, level + 1);
    result = result && consumeTokens(builder, 0, FLEX_ID, FLEX_EQ);
    exit_section_(builder, marker, null, result);
    return result;
  }

  /* ********************************************************** */
  // id
  public static boolean macro_reference(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "macro_reference")) return false;
    if (!nextTokenIs(builder, FLEX_ID)) return false;
    boolean result;
    Marker marker = enter_section_(builder);
    result = consumeToken(builder, FLEX_ID);
    exit_section_(builder, marker, FLEX_MACRO_REFERENCE, result);
    return result;
  }

  /* ********************************************************** */
  // &<<is_new_line>>
  static boolean new_line(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "new_line")) return false;
    boolean result;
    Marker marker = enter_section_(builder, level, _AND_);
    result = is_new_line(builder, level + 1);
    exit_section_(builder, level, marker, result, false, null);
    return result;
  }
